--- a/package.json
+++ b/package.json
@@ -1,3 +1,12 @@
 {
-        
+   "scripts": {
+    "dev": "next dev"
+  },
+   
+  "dependencies": {
+    "next": "^12.1.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  }
+
 }
